Alignment in nav bar fixed

--- a/public/style.css
+++ b/public/style.css
@@ -68,7 +68,7 @@ a:focus {
 .navbar-search {
   float: right;
   margin-right: 20px;
-  padding: 0;
+  padding-left: 825px;
   line-height: 38px;
 }
 
@@ -373,7 +373,6 @@ label.star:before {
   color: #ffca4f;
 }
 
-
 .ratings{
     background-color: white;
     font-family: 'Amatic SC', cursive;
@@ -406,7 +405,7 @@ label.star:before {
 
 .dropdown-menu{
 	position: relative;
-	padding-right: 800px;
+	/*padding-right: 800px;*/
 }
 
 .menu-content{
@@ -415,6 +414,7 @@ label.star:before {
 	list-style-type: none;
 	margin:0px;
 	padding: 10px 15px;
+	min-width: 350px;
 	z-index: 10; /*so menu doesn't get hidden behind other content on page*/
 	background-color: #777676;
 }
